reason_phrase support, plus some more specs

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,7 @@ AllCops:
   DisplayCopNames: true
   DisplayStyleGuide: true
   TargetRubyVersion: 2.7
+  SuggestExtensions: false
 
 Metrics/BlockLength:
   Exclude:
