disable Style/FileName for the entrypoint file

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,10 @@ AllCops:
   TargetRubyVersion: 2.6
   SuggestExtensions: false
 
+Naming/FileName:
+  Exclude:
+    - lib/faraday-typhoeus.rb
+
 Metrics/BlockLength:
   Exclude:
     - spec/**/*.rb
