--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,7 @@ AllCops:
   DisplayStyleGuide: true
   TargetRubyVersion: 2.6
   SuggestExtensions: false
+  NewCops: enable
 
 Metrics/BlockLength:
   Exclude:
